Prevent small screen full-bleed on media decks with 2- or 3-col layout

--- a/web/themes/custom/union_marketing/scss/layout/_default.scss
+++ b/web/themes/custom/union_marketing/scss/layout/_default.scss
@@ -129,7 +129,7 @@ hr.pad {
 }
 
 // Pull some components into the grid gutter on smaller screens.
-.cu-component.cu-component--deck,
+.cu-component.cu-component--deck.cu-grid--gapless,
 .cu-component.cu-card--panel,
 .cu-component--topic-list,
 .cu-component--cinematic,
